# congent

./: .gitignore  README.md  pyproject.toml
services/ai-service/: __init__.py  content_generation.py  docker-compose.yaml  graphrag_agent.py  graphrag_agent_a.py  knowledge_graph.py  main.py  memory.py  openai_helper_classes.py  parquet_to_csv.py  pyproject.toml  railway.json  requirements.txt  run.py  search_the_graph_demo.py  supabase_download_files_demo.py  tools.py  utils.py
services/ai-service/artifacts/: create_base_entity_graph.parquet  create_base_extracted_entities.csv  create_base_extracted_entities.parquet  create_base_text_units.csv  create_final_communities.parquet  create_final_community_reports.csv  create_final_community_reports.parquet  create_final_documents.csv  create_final_nodes.parquet  create_summarized_entities.csv  join_text_units_to_relationship_ids.parquet
services/ai-service/azure_test/: README.md
services/ai-service/db_saver/: __init__.py  implementation.py  supabase_db_saver.py
services/ai-service/graph-csv/: create_base_documents.csv  create_base_entity_graph.csv  create_base_extracted_entities.csv  create_base_text_units.csv  create_final_communities.csv  create_final_community_reports.csv  create_final_documents.csv  create_final_entities.csv  create_final_nodes.csv  create_final_relationships.csv  create_final_text_units.csv  create_summarized_entities.csv  join_text_units_to_entity_ids.csv  join_text_units_to_relationship_ids.csv
services/ai-service/indexing/: README.md  __init__.py  config.yml
services/ai-service/kg_project_template/: README.md
services/ai-service/models/: async_callback_handler.py  event.py  graphrag_search.py
services/ai-service/pair_programming_kg/: settings.yaml
services/ai-service/pair_programming_old/: settings.yaml
services/ai-service/project_template/: README.md  settings.yml
services/ai-service/prompts/: jorges-writing-style.md
services/ai-service/querying/: __init__.py  config.yaml  config.yml  global.py  global_asearch.py  global_search.py  global_search_cofig.yml  knowledge_graph_loader.py  llm_helpers.py  local.py  local_asearch.py  local_search.py  question_gen.py  run.py
services/ai-service/readai_transcripts_from_aug_8/: 10 Minute Preliminary Interview between_ Transcript (2).txt  10 Minute Preliminary Interview between_ Transcript.txt  30 Minute call with Nasim, AI consultan_ Transcript.txt  Adapt Feature Discussion - Milestones Transcript.txt  Dicussing IP in context of Reviews Sysem Transcript.txt  Discussing Graph Design Pt 2 Transcript (1).txt  Discussing Stori architecture Transcript.txt  Discussion on IP Transcript.txt  Intro to Company Brain Project Transcript (1).txt  Jared Catching up Transcript.txt  Meet Meeting Transcript (1).txt  Meet Meeting Transcript (11).txt  Meet Meeting Transcript (2).txt  Meet Meeting Transcript (22).txt  Meet Meeting Transcript (24).txt  Meet Meeting Transcript (25).txt  Meet Meeting Transcript (28).txt  Meet Meeting Transcript (32).txt  Meet Meeting Transcript (33).txt  Meet Meeting Transcript (35).txt  (+8 more)
(+321 files in other folders)
