[tool.poetry]
name = "congent"
version = "0.1.0"
description = "agentic content generation from long-form transcripts"
authors = ["Jorge Lewis <31695089+antopiahk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.23"
langchain-core = "^0.2.36"
langchain-community = "^0.2.14"
neo4j = "^5.24.0"
langgraph-checkpoint-postgres = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
